--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8082
+spring.application.name=product-service
+spring.datasource.url=jdbc:h2:mem:product-db
+spring.cloud.discovery.enabled=false
+#management.endpoints.web.exposure.include=*
