--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,1 +1,16 @@
-
+spring:
+  cloud:
+    gateway:
+      routes:
+        - id: r1
+          uri : http://localhost:8081/
+          predicates :
+            - Path= /customers/**
+        - id: r2
+          uri : http://localhost:8082/
+          predicates :
+            - Path= /products/**
+    discovery:
+      enable: false
+server:
+  port: 8888
