--- a/billing-service/src/main/resources/application.properties
+++ b/billing-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8083
+spring.application.name=billing-service
+spring.datasource.url=jdbc:h2:mem:billing-db
+spring.cloud.discovery.enabled=true
+#management.endpoints.web.exposure.include=*
